--- a/src/app/crear-administrador/crear-administrador.component.scss
+++ b/src/app/crear-administrador/crear-administrador.component.scss
@@ -322,3 +322,31 @@ h1 {
   max-width: 800px;
   margin: 0 auto;
 }
+
+/* Agrega estos estilos al archivo .scss o .css de tu componente */
+
+.input-container {
+  position: relative;
+}
+
+.password-input-container {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.login-password {
+  padding-right: 40px; /* Ajusta según sea necesario para dejar espacio para el ícono */
+}
+
+.show-password-icon {
+  position: absolute;
+  right: 30px; /* Ajusta según sea necesario */
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.error {
+  border: 1px solid red; /* Estilo de borde rojo para indicar un error */
+}
